# trt_proj

./: .gitignore  CMakeLists.txt  README.md  YoloV5封装说明.doc  main.cpp
include/: common.h  utils.h  yolov5.h  yolov5net.h
include/common/: common.h
include/yolov4/: mish.h  yololayer.h  yolov4.h  yolov4cfg.h  yolov4layer.h
include/yolov5/: yolov5.h  yolov5cfg.h  yolov5layer.h
lib/: yolov4.lib
src/: utils.cpp  yolov5.cpp  yolov5net.cpp
src/common/: common.cpp
src/resnet18/: resnet18.cpp
src/yolov4/: mish.cu  yololayer.cu  yolov4.cpp  yolov4layer.cu
src/yolov5/: calibrator.cpp  common.cpp  yolov5.cpp  yolov5layer.cu
yolov5/include/: common.h  utils.h  yolov5.h
yolov5/src/: common.cpp  utils.cpp  yolov5.cpp  yolov5layer.cu
